cd '/home/paalab/Desktop/farm-ng-amiga'
Secondary commit with stream and launch_all programs, as well as all other modifications

--- a/py/examples/camera_client/service_config.json
+++ b/py/examples/camera_client/service_config.json
@@ -1,7 +1,7 @@
 {
     "name": "oak0",
     "port": 50010,
-    "host": "localhost",
+    "host": "100.87.161.11",
     "log_level": "INFO",
     "subscriptions": [
         {
