--- a/py/examples/pendant_state/service_config.json
+++ b/py/examples/pendant_state/service_config.json
@@ -1,7 +1,7 @@
 {
     "name": "canbus",
     "port": 6001,
-    "host": "localhost",
+    "host": "100.87.161.11",
     "log_level": "INFO",
     "subscriptions": [
       {
